Changes with Apache 1.3b7

  *) chdir() doesn't make sense in a multithreaded environment like WIN32.
     Before, Win32 CGI's could have had sporadic failures if a chdir call
     from one thread was made between another chdir call and a spawn in
     another thread.  So, for now don't chdir for CGI scripts in WIN32.
     The current CGI "spec" is unclear as to whether it's necessary.  Long-
     term fix is to either serialize the chdir/spawn combo or use WIN32
     native calls to spawn a process.  This temp fix was necessary to remove 
     this as a showstopper for 1.3's release. [Brian Behlendorf]

  *) Cleanup the suEXEC support in APACI and make it more safe:
     1. Add big fat hint in INSTALL about risks and to read the
        htdocs/manual/suexec.html document before using the suexec-related
        configure options.
     2. Make sure the user has at least provided one --suexec-xxxx option
        (specifies suEXEC parameters) in addition to --enable-suexec option.
        If only --enable-suexec is given APACI stops with a hint to INSTALL
        and htdocs/manual/suexec.html documents.
     3. Provide two additional --suexec-xxxx options to make the suEXEC
        configuration complete (especially for package maintainers who else
        had to patch the source tree) by providing ways to configure minimal
        UID/GID and safe PATH, too.
     [Ralf S. Engelschall]

  *) Cleanup of the `configure --shadow' process:
     - make sure the configure script creates its temporary files in the
       shadow tree to avoid conflicts with parallel configure runs
     - removed unnecessary option "-r" from "rm" call for Makefiles
     - make sure the configure scripts creates the shadow-wrapper Makefile
       only when no shadow trees already exists
     - make sure "make distclean" removes the shadow-wrapper Makefile but only
       when no more shadow trees exists
     - overhauled mkshadow.sh script: now its more IFS-safe and approx. twice